--- a/Simply.Reactive.Wpf.Tests/MainWindow.xaml
+++ b/Simply.Reactive.Wpf.Tests/MainWindow.xaml
@@ -2,21 +2,76 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:r="clr-namespace:Simply.Reactive.Wpf.Xaml;assembly=Simply.Reactive.Wpf"
+        xmlns:tests="clr-namespace:Simply.Reactive.Wpf.Tests"
         DataContext="{StaticResource MainWindowViewModel}"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="Auto" />
-        </Grid.ColumnDefinitions>
+        Title="MainWindow" Height="525" Width="525">
+    <StackPanel>
+        <GroupBox>
+           <GroupBox.Header>Observable Test</GroupBox.Header>
+            <StackPanel Orientation="Horizontal" Margin="10">
+                <CheckBox Content="Observable" IsChecked="{r:ReactiveBinding Path=Observable}" Width="120" />
+                <TextBlock Text="{r:ReactiveBinding Path=ObservableDescription}" Width="200" Margin="10 0 0 0" />
+            </StackPanel>
+        </GroupBox>
 
-        <CheckBox Grid.Row="0" Grid.Column="0" Content="IsWorking" IsChecked="{r:ReactiveBinding Path=IsWorking}" />
-        <TextBlock Grid.Row="0" Grid.Column="1" Text="{r:ReactiveBinding Path=IsWorkingDescription}" Width="200" />
-        <CheckBox Grid.Row="1" Grid.Column="0" Content="IsWorking2" IsChecked="{r:ReactiveBinding Path=IsWorking2}" />
-        <TextBlock Grid.Row="1" Grid.Column="1" Text="{r:ReactiveBinding Path=IsWorking2Description}" Width="200" />
-    </Grid>
+        <GroupBox>
+            <GroupBox.Header>Subject Test</GroupBox.Header>
+            <StackPanel Orientation="Horizontal" Margin="10">
+                <CheckBox Content="Subject" IsChecked="{r:ReactiveBinding Path=Subject}" Width="120" />
+                <TextBlock Text="{r:ReactiveBinding Path=SubjectDescription}" Width="200" Margin="10 0 0 0" />
+            </StackPanel>
+        </GroupBox>
+
+        <GroupBox>
+            <GroupBox.Header>DataTemplate Test</GroupBox.Header>
+            <StackPanel Orientation="Horizontal" Margin="10">
+                <ContentPresenter Content="{Binding Path=TestTestDataTemplateDataSource}">
+                    <ContentPresenter.Resources>
+                        <DataTemplate DataType="{x:Type tests:TestDataTemplateViewModel}">
+                            <StackPanel>
+                                <StackPanel Orientation="Horizontal">
+                                    <CheckBox Content="Observable" IsChecked="{r:ReactiveBinding Path=Observable}" Width="120" />
+                                    <TextBlock Text="{r:ReactiveBinding Path=ObservableDescription}" Width="200" Margin="10 0 0 0" />
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
+                                    <CheckBox Content="NonObservable" IsChecked="{Binding Path=NonObservable}" Width="120" />
+                                    <TextBlock Text="{Binding Path=NonObservableDescription}" Width="200" Margin="10 0 0 0" />
+                                </StackPanel>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ContentPresenter.Resources>
+                </ContentPresenter>
+            </StackPanel>
+        </GroupBox>
+
+        <GroupBox>
+            <GroupBox.Header>TestParentDataSource Test</GroupBox.Header>
+            <StackPanel DataContext="{Binding Path=TestParentDataSource}" Margin="10">
+                <StackPanel Orientation="Horizontal">
+                    <CheckBox Content="Observable" IsChecked="{r:ReactiveBinding Path=Observable}" Width="120" />
+                    <TextBlock Text="{r:ReactiveBinding Path=ObservableDescription}" Width="200" Margin="10 0 0 0" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
+                    <CheckBox Content="NonObservable" IsChecked="{Binding Path=NonObservable}" Width="120" />
+                    <TextBlock Text="{Binding Path=NonObservableDescription}" Width="200" Margin="10 0 0 0" />
+                </StackPanel>
+            </StackPanel>
+        </GroupBox>
+        
+        <GroupBox>
+            <GroupBox.Header>TestParentObservableDataSourceViewModel Test</GroupBox.Header>
+            <StackPanel DataContext="{r:ReactiveBinding Path=TestParentObservableDataSource}" Margin="10">
+                <StackPanel Orientation="Horizontal">
+                    <CheckBox Content="Observable" IsChecked="{r:ReactiveBinding Path=Observable}" Width="120" />
+                    <TextBlock Text="{r:ReactiveBinding Path=ObservableDescription}" Width="200" Margin="10 0 0 0" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
+                    <CheckBox Content="NonObservable" IsChecked="{Binding Path=NonObservable}" Width="120" />
+                    <TextBlock Text="{Binding Path=NonObservableDescription}" Width="200" Margin="10 0 0 0" />
+                </StackPanel>
+            </StackPanel>
+        </GroupBox>
+
+    </StackPanel>
+
 </Window>
